# tf-vars-to-pydantic

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  pre-release.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/tf_vars_to_pydantic/: __init__.py  convert.py  exceptions.py
tests/: __init__.py  conftest.py  test_convert.py  test_main.py
tests/fixtures/: missing_type.tf  simple.tf  valid.tf
tf_vars_to_pydantic/: __init__.py  _typing.py  convert.py  exceptions.py
