[tool.poetry]
name = "tf-vars-to-pydantic"
version = "0.0.0"
description = "Tf Vars To Pydantic"
authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrewthetechie/tf-vars-to-pydantic"
repository = "https://github.com/andrewthetechie/tf-vars-to-pydantic"
documentation = "https://tf-vars-to-pydantic.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/andrewthetechie/tf-vars-to-pydantic/releases"

[tool.poetry.dependencies]
python = "^3.11"
python-hcl2 = "^4.3.0"
pydantic = "^1.10.5"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
mypy = "^1.0.1"
pre-commit = "^3.1.1"
pre-commit-hooks = "^4.4.0"
pytest = "^7.2.2"
pyupgrade = "^3.3.1"
safety = "^2.3.5"


[tool.poetry.scripts]
tfvars2pydantic = "tf_vars_to_pydantic.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
reorder-python-imports = "^3.9.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tf_vars_to_pydantic", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
